--- a/MichaelYllanes_801299358_Assignment1.ipynb
+++ b/MichaelYllanes_801299358_Assignment1.ipynb
@@ -492,7 +492,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "QrR7zmLiOEo3",
         "outputId": "bedd6f88-8228-4b12-c1cb-8c981db66733"
@@ -698,15 +699,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XYLCUHSmdEYi",
-        "outputId": "65990b84-9ad7-4879-d56a-b839931d12f1"
+        "outputId": "e77b7b49-c338-4dc6-c737-4396a105dcd4"
       },
-      "execution_count": null,
+      "execution_count": 664,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "X1 Final value of theta = [0.70477774 0.56978312]\n"
+            "X1 Final value of theta = [0.73388938 0.5584526 ]\n"
           ]
         }
       ]
@@ -900,15 +901,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pp7Rw1vUgl7O",
-        "outputId": "29054dcd-31a8-4a7d-f8a6-5abfbdfe5106"
+        "outputId": "7356fff1-aaf1-401f-f6b5-831ce78c928a"
       },
-      "execution_count": null,
+      "execution_count": 663,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "X1 Final value of theta = [ 2.86945679 -0.51970561]\n"
+            "X1 Final value of theta = [ 2.87142065 -0.52048231]\n"
           ]
         }
       ]
