--- a/Notebooks/Exercise_PyTorch.ipynb
+++ b/Notebooks/Exercise_PyTorch.ipynb
@@ -26,6 +26,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Michael Yllanes"
+      ],
+      "metadata": {
+        "id": "4-hSVslViwVu"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
@@ -96,10 +105,10 @@
       ],
       "metadata": {
         "id": "6vKPafzGm7q8",
-        "outputId": "48df5490-8e76-4712-9d91-c95dffda90e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "48df5490-8e76-4712-9d91-c95dffda90e8"
       },
       "execution_count": 23,
       "outputs": [
@@ -122,10 +131,10 @@
       ],
       "metadata": {
         "id": "rKIJEkO5nA8w",
-        "outputId": "31e582cf-120e-412b-8e7b-f6a28cf9096d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "31e582cf-120e-412b-8e7b-f6a28cf9096d"
       },
       "execution_count": 24,
       "outputs": [
@@ -166,10 +175,10 @@
       ],
       "metadata": {
         "id": "JGcsHMlQoxzS",
-        "outputId": "a5e914e9-7162-4aba-e658-03e07690a2f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a5e914e9-7162-4aba-e658-03e07690a2f5"
       },
       "execution_count": 26,
       "outputs": [
@@ -203,10 +212,10 @@
       ],
       "metadata": {
         "id": "nzwpyo_XqX6n",
-        "outputId": "1e410f6c-6d4e-417b-8c1a-56585d517263",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1e410f6c-6d4e-417b-8c1a-56585d517263"
       },
       "execution_count": 27,
       "outputs": [
@@ -259,10 +268,10 @@
       ],
       "metadata": {
         "id": "q91PZCu_sbWo",
-        "outputId": "fb712835-b223-4b4b-8a5e-e1083e2823e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fb712835-b223-4b4b-8a5e-e1083e2823e7"
       },
       "execution_count": 33,
       "outputs": [
@@ -331,10 +340,10 @@
       ],
       "metadata": {
         "id": "532hOXol8sZ4",
-        "outputId": "dfb63cd9-2b1e-427a-cc85-71e7cebe7541",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dfb63cd9-2b1e-427a-cc85-71e7cebe7541"
       },
       "execution_count": 37,
       "outputs": [
@@ -435,10 +444,10 @@
       ],
       "metadata": {
         "id": "_oIEW7gei7k0",
-        "outputId": "6b65be11-afcf-41ae-da5d-076c20e3abc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6b65be11-afcf-41ae-da5d-076c20e3abc0"
       },
       "execution_count": 48,
       "outputs": [
@@ -506,11 +515,11 @@
       ],
       "metadata": {
         "id": "8KukuwAKnSUP",
-        "outputId": "48a6b8ea-1d08-487e-e541-888a36c7f5d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 918
-        }
+        },
+        "outputId": "48a6b8ea-1d08-487e-e541-888a36c7f5d7"
       },
       "execution_count": 43,
       "outputs": [
